--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <body>
         <h1> Odin Recipes </h1>
-        <a href="recipes/nachos.html">Nachos</a>
-        <a href="recipes/pizza.html">Pizza</a>
-        <a href="recipes/hotdog.html">Hotdog</a>
+        <a href="./recipes/nachos.html">Nachos</a>
+        <a href="./recipes/pizza.html">Pizza</a>
+        <a href="./recipes/hotdog.html">Hotdog</a>
     </body>
 
 </html>
