--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> Odin Recipes </title>
+        <title> Zack's Recipes </title>
     </head>
 
     <body>
-        <h1> Odin Recipes </h1>
+        <h1> Zack's Recipes </h1>
         <a href="./recipes/nachos.html">Nachos</a>
         <a href="./recipes/pizza.html">Pizza</a>
         <a href="./recipes/hotdog.html">Hotdog</a>
