--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 
     <body>
         <h1> Zack's Recipes </h1>
-        <a href="./recipes/nachos.html">Nachos</a>
-        <a href="./recipes/pizza.html">Pizza</a>
-        <a href="./recipes/hotdog.html">Hotdog</a>
+
+        <img src="./recipes/images/chef.jpg" alt="Normal Chef" width="200" height="350">
+
+        <ul>
+            <li> <a href="./recipes/nachos.html">Nachos</a> </li>
+            <li> <a href="./recipes/pizza.html">Pizza</a> </li>
+            <li> <a href="./recipes/hotdog.html">Hotdog</a> </li>
+        </ul>
     </body>
 
 </html>
