--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1> Zack's Recipes </h1>
 
-        <img src="./recipes/images/chef.jpg" alt="Normal Chef" width="200" height="350">
+        <img src="recipes/images/chef.jpg" alt="Normal Chef" width="200" height="350">
 
         <ul>
             <li><a href="./recipes/nachos.html">Nachos</a></li>
